--- a/app/views/quotations/_form.html.erb
+++ b/app/views/quotations/_form.html.erb
@@ -1,32 +1,40 @@
-<%= form_with(model: quotation, local: true) do |form| %>
-  <% if quotation.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(quotation.errors.count, "error") %> prohibited this quotation from being saved:</h2>
+<%= form_with(model: @quotation, local: true, html: {autocomplete: 'off'}) do |form| %>
+  <div class="form">
+    <div class="form-row">
 
-      <ul>
-      <% quotation.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
+      <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
+        <%= form.label t('customer') %>
+        <%= form.collection_select :customer_id, Customer.all, :id, :name, {:include_blank => true}, {class: 'form-control', id: "quotation_customer", :required => true} %>
+      </div>
+
+      <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
+        <%= form.label t('status') %>
+        <%= form.select(:status, Quotation.statuses.keys {|status| [status.value, status.value]}, {}, {class: 'form-control', id: "quotation_status", autocomplete: 'nope'}) %>
+      </div>
+
+      <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
+        <%= form.label t('date_locale') %>
+        <div class="picker-container">
+          <%= form.text_field :date, "data-provide" => 'datepicker', "data-date-format" => "dd/mm/yyyy", value: Time.zone.now.to_date.strftime("%d/%m/%Y"), autocomplete: 'off', id: "dateProject", class: "form-control" %>
+        </div>
+      </div>
     </div>
-  <% end %>
+    <div class="form-row">
 
-  <div class="field">
-    <%= form.label :date %>
-    <%= form.date_select :date %>
-  </div>
+      <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
+        <%= form.label t('project') %>
 
-  <div class="field">
-    <%= form.label :status %>
-    <%= form.number_field :status %>
-  </div>
-
-  <div class="field">
-    <%= form.label :total %>
-    <%= form.text_field :total %>
-  </div>
-
-  <div class="actions">
-    <%= form.submit %>
+        <%= form.select(:project_id,
+                        Project.where(status: :Devis)
+                            .where('projects.id NOT IN (SELECT DISTINCT(project_id) FROM quotations WHERE project_id IS NOT NULL)')
+                            .or(Project.where(id: @quotation&.project_id))
+                            .collect {|project| [project.name, project.id]},
+                        {:include_blank => true},
+                        {class: 'form-control', id: "project_status", autocomplete: 'nope'}) %>
+      </div>
+      <div class="actions col-xs-10 col-sm-4 col-md-4 col-lg-2 createButton">
+        <%= form.submit t('create'), :class => "btn btn-dark form-group" %>
+      </div>
+    </div>
   </div>
 <% end %>
