--- a/app/views/quotations/index.html.erb
+++ b/app/views/quotations/index.html.erb
@@ -1,29 +1,70 @@
-<h1>Quotations</h1>
+<h2 id="titleBadge"><%= t('quotation').pluralize %></h2>
 
-<table>
-  <thead>
-    <tr>
-      <th>Date</th>
-      <th>Status</th>
-      <th>Total</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<ul class="nav nav-tabs" role="tablist">
+  <li class="nav-item active">
+    <a class="nav-link active" data-toggle="tab" href="#listing" role="tab">Listing</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" data-toggle="tab" href="#new" role="tab">Nouveau devis</a>
+  </li>
+</ul>
 
-  <tbody>
-    <% @quotations.each do |quotation| %>
-      <tr>
-        <td><%= quotation.date %></td>
-        <td><%= quotation.status %></td>
-        <td><%= quotation.total %></td>
-        <td><%= link_to 'Show', quotation %></td>
-        <td><%= link_to 'Edit', edit_quotation_path(quotation) %></td>
-        <td><%= link_to 'Destroy', quotation, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+<div class="tab-content">
+  <div class="tab-pane fade show active" id="listing">
+    <%= search_form_for @search do |form| %>
+      <div class="form">
+        <div class="row">
+          <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
+            <%= form.label t('project') %>
+            <%= form.collection_select :id_eq, Project.all, :id, :name, {:include_blank => true}, class: 'form-control', onchange: 'this.form.submit();' %>
+          </div>
+          <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
+            <%= form.label t('customer') %>
+            <%= form.collection_select :customer_id_eq, Customer.all, :id, :name, {:include_blank => true}, class: 'form-control', onchange: 'this.form.submit();' %>
+          </div>
+          <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
+            <%= form.label t('status') %>
+            <%= form.select :status_eq, Quotation.statuses.map {|status| [status[0], status[1].to_i]}, {:include_blank => true}, class: 'form-control', onchange: 'this.form.submit();' %>
+          </div>
+        </div>
+      </div>
     <% end %>
-  </tbody>
-</table>
 
-<br>
+    <table class="table table-hover table-striped"  id="table-to-color">
+      <thead class=thead-dark>
+      <tr>
+        <th><%= t('customer').capitalize %></th>
+        <th><%= t('Date') %></th>
+        <th><%= t('status') %></th>
+        <th><%= t('gross_cost').to_s + ' (€)' %></th>
+        <th><%= t('Total').to_s + ' (€)' %></th>
+        <th></th>
+      </tr>
+      </thead>
+      <tbody>
+      <% @quotations.each do |quotation| %>
+        <tr data-link="<%= edit_quotation_path quotation %>">
+          <td>
+            <%= quotation.customer ? quotation.customer.name : '' %>
+          </td>
+          <td><%= l(quotation.date) %></td>
+          <td id="status-cell"><%= quotation.status %></td>
+          <td><%= number_with_precision  quotation.total_gross, :precision => 2 %></td>
+          <td><%= number_with_precision  quotation.total, :precision => 2 %></td>
 
-<%= link_to 'New Quotation', new_quotation_path %>
+          <td style="padding: 0">
+            <%= link_to image_tag("pdf-icon.png", size: "50x50"), quotation_path(quotation.id, :format => :pdf) %>
+            <%= link_to quotation, method: :delete, data: {confirm: t('confirm_delete')} do %>
+              <%= image_tag("delete-icon.png", size: "30x30") %>
+            <% end %>
+          </td>
+        </tr>
+      <% end %>
+      </tbody>
+    </table>
+    <br>
+  </div>
+  <div class="tab-pane fade" id="new">
+    <%= render 'invoices/new' %>
+  </div>
+</div>
