--- a/app/views/services/_form.html.erb
+++ b/app/views/services/_form.html.erb
@@ -1,11 +1,25 @@
 <%= form_with(model: @service, local: true, id: "servicesForm") do |form| %>
   <div class="form">
-    <div class="row">
+    <div class="form-row">
 
       <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
         <%= form.label t('project') %>
         <%= form.select(:project_id, Project.all.collect {|project| [project.name.to_s + ' - ' + project.customer.name, project.id]}, {:include_blank => true}, {class: 'form-control', autocomplete: 'off'}) %>
       </div>
+
+      <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
+        <%= form.label t('status') %>
+        <%= form.select(:status, Service.statuses.keys {|status| [status.value, status.value]}, {}, {class: 'form-control', autocomplete: 'off'}) %>
+      </div>
+
+      <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
+        <%= form.label t('date_locale') %>
+        <div class="picker-container">
+          <%= form.text_field :date, "data-provide" => 'datepicker', "data-date-format" => "dd/mm/yyyy", value: Time.zone.now.to_date.strftime("%d/%m/%Y"), autocomplete: 'off', id: "dateProject", class: "form-control" %>
+        </div>
+      </div>
+    </div>
+    <div class="form-row">
 
       <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
         <%= form.label t('Name') %>
@@ -16,18 +30,9 @@
         <%= form.label t('comment') %>
         <%= form.text_field :comment, class: "form-control", autocomplete: 'off' %>
       </div>
+    </div>
 
-      <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
-        <%= form.label t('status') %>
-        <%= form.select(:status, Service.statuses.keys {|status| [status.value, status.value]}, {}, {class: 'form-control', autocomplete: 'off'}) %>
-      </div>
-
-      <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
-        <%= form.label t('Date') %>
-        <div class="picker-container" >
-          <%= form.text_field :date, "data-provide" => 'datepicker',  autocomplete: 'off' , class: "datepicker form-control"%>
-        </div>
-      </div>
+    <div class="form-row">
 
       <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
         <%= form.label t('duration') %>
@@ -37,27 +42,39 @@
       </div>
 
       <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-1">
-        <%= form.label t('hourly_rate'), class: "smallerLabel" %>
-        <%= form.text_field :hourly_rate, class: "form-control", autocomplete: 'nope' , id: 'hourly_rate'%>
+        <%= form.label t('hourly_rate') + ' (€/H)' %>
+        <%= form.text_field :hourly_rate, class: "form-control", autocomplete: 'nope', id: 'hourly_rate' %>
       </div>
 
       <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-1">
-        <%= form.label t('tva_rate') %>
-        <%= form.text_field :tva_rate, value: '21', class: "form-control", id: "tva_rate_s", autocomplete: 'nope'%>
+        <%= form.label t('tva_rate') + " (%)" %>
+        <%= form.text_field :tva_rate, value: '21', class: "form-control", id: "tva_rate_s", autocomplete: 'nope' %>
       </div>
 
       <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-1">
-        <%= form.label t('gross_cost') %>
-        <%= form.text_field :total_gross, class: "form-control", id: "total_gross_s", autocomplete: 'nope'%>
+        <%= form.label t('gross_cost') + " (€)" %>
+        <%= form.text_field :total_gross, class: "form-control", id: "total_gross_s", autocomplete: 'nope' %>
       </div>
 
       <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-1">
-        <%= form.label t('total_cost') %>
+        <%= form.label t('total_cost') + " (€)" %>
         <%= form.text_field :total_cost, class: "form-control", id: "total_cost_s", autocomplete: 'nope' %>
       </div>
 
+      <%= form.hidden_field(@service ? @service.project.invoice_id : 0, id: 'invoice_id') %>
+
+    </div>
+
+    <div class="form-row">
       <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2 createButton">
-        <%= form.submit t('create'), :class => "btn btn-dark form-group" %>
+        <%= form.submit t('create'), :class => "btn btn-dark form-group",
+                        data:
+                            if @service
+                              if @service.project&.invoice
+                                {confirm: t('service_already_invoiced')}
+                              end
+                            elsif {}
+                            end %>
       </div>
     </div>
   </div>
