--- a/app/views/services/index.html.erb
+++ b/app/views/services/index.html.erb
@@ -1,4 +1,4 @@
-<h2><%= t(:service).pluralize %></h2>
+<h2 id="titleBadge"><%= t(:service).pluralize %></h2>
 
 <ul class="nav nav-tabs" role="tablist">
   <li class="nav-item active">
@@ -31,13 +31,13 @@
       </div>
     <% end %>
 
-    <table class="table table-hover table-striped">
+    <table class="table table-hover table-striped" id="table-to-color">
       <thead class=thead-dark>
       <tr>
         <th><%= t(:project).capitalize %></th>
         <th><%= t('Name') %></th>
         <th><%= t('comment') %></th>
-        <th><%= t('status') %></th>
+        <th ><%= t('status') %></th>
         <th><%= t('Date') %></th>
         <th><%= t('hourly_rate') %></th>
         <th><%= t('duration') %></th>
@@ -55,14 +55,14 @@
           </td>
           <td><%= service.name %></td>
           <td><%= service.comment %></td>
-          <td><%= service.status %></td>
-          <td><%= l(service.date) %></td>
+          <td id="status-cell"><%= service.status %></td>
+          <td><%= service.date %></td>
           <td><%= service.hourly_rate %></td>
           <td><%= service.duration.strftime('%H:%M') %></td>
           <td><%= service.tva_rate %></td>
           <td><%= number_with_precision service.total_cost, :precision => 2 %></td>
           <td>
-            <%= link_to service, method: :delete, data: {confirm: 'Are you sure?'} do %>
+            <%= link_to service, method: :delete, data: {confirm: t('confirm_delete')} do %>
               <%= image_tag("delete-icon.png", size: "30x30") %>
             <% end %>
           </td>
