--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -30,13 +30,13 @@
           <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
             <%= form.label t('from') %>
             <div class="picker-container">
-              <%= form.text_field :date_gteq, "data-provide" => 'datepicker', "data-date-format" => "dd/mm/yyyy", autocomplete: 'off', id:"sortProjectFrom", class: "form-control", onchange: 'this.form.submit();' %>
+              <%= form.text_field :date_gteq, "data-provide" => 'datepicker', "data-date-format" => "dd/mm/yyyy", autocomplete: 'off', id: "sortProjectFrom", class: "form-control", onchange: 'this.form.submit();' %>
             </div>
           </div>
           <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
             <%= form.label t('to') %>
             <div class="picker-container">
-              <%= form.text_field :date_lteq, "data-provide" => 'datepicker', "data-date-format" => "dd/mm/yyyy", autocomplete: 'off',id:"sortProjectTo", class: "form-control", onchange: 'this.form.submit();' %>
+              <%= form.text_field :date_lteq, "data-provide" => 'datepicker', "data-date-format" => "dd/mm/yyyy", autocomplete: 'off', id: "sortProjectTo", class: "form-control", onchange: 'this.form.submit();' %>
             </div>
           </div>
         </div>
@@ -45,14 +45,14 @@
     <table class="table table-hover table-striped" id="table-to-color">
       <thead class=thead-dark>
       <tr>
-        <th><%= t('id_locale').upcase %></th>
+        <th class="centerCell"><%= t('id_locale').upcase %></th>
         <th><%= t('customer').capitalize %></th>
         <th><%= t('project_title') %></th>
         <th class="description-header"><%= t('description') %></th>
-        <th><%= t('Date') %></th>
-        <th><%= t('status') %></th>
-        <th><%= t('gross_cost').to_s + ' (€)' %></th>
-        <th><%= t('Total').to_s + ' (€)' %></th>
+        <th class="centerCell"><%= t('Date') %></th>
+        <th class="centerCell"><%= t('status') %></th>
+        <th class="rightCell"><%= t('gross_cost').to_s + ' (€)' %></th>
+        <th class="rightCell"><%= t('Total').to_s + ' (€)' %></th>
         <th colspan="3"></th>
       </tr>
       </thead>
@@ -60,14 +60,14 @@
       <tbody>
       <% @projects.each do |project| %>
         <tr data-link="<%= edit_project_path project %>">
-          <td><%= '#' + project.id.to_s %></td>
+          <td class="centerCell"><%= '#' + project.id.to_s %></td>
           <td><%= project.customer ? project.customer.name : nil %></td>
           <td><%= project.name %></td>
           <td><%= project.description %></td>
-          <td><%= l(project.date) %></td>
-          <td id="status-cell"><%= project.status %></td>
-          <td><%= number_with_precision project.total_gross, :precision => 2 %></td>
-          <td><%= number_with_precision project.total, :precision => 2 %></td>
+          <td class="centerCell"><%= l(project.date) %></td>
+          <td class="centerCell" id="status-cell"><%= project.status %></td>
+          <td class="rightCell"><%= number_with_precision project.total_gross, :precision => 2 %></td>
+          <td class="rightCell"><%= number_with_precision project.total, :precision => 2 %></td>
           <td>
             <%= link_to project, method: :delete, data: {confirm: t('confirm_delete')} do %>
               <%= image_tag("delete-icon.png", size: "30x30") %>
