--- a/app/views/wares/index.html.erb
+++ b/app/views/wares/index.html.erb
@@ -33,12 +33,12 @@
     <table class="table table-hover table-striped"  id="table-to-color">
       <thead class=thead-dark>
       <tr>
-        <th><%= t(:project).capitalize %></th>
+        <th class="centerCell"><%= t(:project).capitalize %></th>
         <th><%= t('customer').capitalize %></th>
         <th><%= t('ware_name') %></th>
         <th><%= t('provider_name') %></th>
         <th><%= t('comment') %></th>
-        <th><%= t('status') %></th>
+        <th class="centerCell"><%= t('status') %></th>
         <!--      <th><%#= t('Provider discount') %></th>-->
         <!--      <th><%#= t('Margin') %></th>-->
         <!--      <th><%#= t('Quantity') %></th>-->
@@ -52,7 +52,7 @@
       <tbody>
       <% @wares.each do |ware| %>
         <tr data-link="<%= edit_ware_path ware %>">
-          <td>
+          <td class="centerCell">
             <%= ware.project ? (link_to '#' + ware.project.id.to_s, edit_project_path(ware.project.id)) : '' %>
           </td>
           <td>
@@ -62,7 +62,7 @@
           <td><%= ware.ware_name %></td>
           <td><%= ware.provider_name %></td>
           <td><%= ware.comment %></td>
-          <td id="status-cell"><%= ware.status %></td>
+          <td class="centerCell" id="status-cell"><%= ware.status %></td>
           <!--        <td><%#= ware.provider_discount %></td>-->
           <!--        <td><%#= ware.margin %></td>-->
           <!--        <td><%#= ware.quantity %></td>-->
